--- a/06_Paper/COG-ED/Stage 2/CAD.bib
+++ b/06_Paper/COG-ED/Stage 2/CAD.bib
@@ -999,4 +999,13 @@
   publisher = {{SAGE} Publications},
 }
 
+@Manual{Aust2020,
+  title  = {{papaja}: {Create} {APA} manuscripts with {R Markdown}},
+  author = {Frederik Aust and Marius Barth},
+  note   = {R package version 0.1.0.9997},
+  year   = {2020},
+  groups = {Burnout in teachers, CAD},
+  url    = {https://github.com/crsh/papaja},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
