--- a/06_Paper/COG-ED/Stage 2/CAD.bib
+++ b/06_Paper/COG-ED/Stage 2/CAD.bib
@@ -1008,4 +1008,17 @@
   url    = {https://github.com/crsh/papaja},
 }
 
+@Article{Massar2019,
+  author    = {Stijn A. A. Massar and Julian Lim and Karen Sasmita and Michael W. L. Chee},
+  journal   = {Neuropsychologia},
+  title     = {Sleep deprivation increases the costs of attentional effort: Performance, preference and pupil size},
+  year      = {2019},
+  month     = {feb},
+  pages     = {169--177},
+  volume    = {123},
+  doi       = {10.1016/j.neuropsychologia.2018.03.032},
+  groups    = {CAD},
+  publisher = {Elsevier {BV}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
